tests/snapshots/parser/blockquote_multi_paragraph.snap
---
source: tests/snapshot_parse.rs
description: "> first\n>\n> second\n"
---
Document [0..19]
  BlockQuote [0..19]
    Paragraph [2..8]
      Text "first" [2..7]
    Paragraph [12..19]
      Text "second" [12..18]
