tests/snapshots/parser/blockquote_single_line.snap
---
source: tests/snapshot_parse.rs
description: "> hello\n"
---
Document [0..8]
  BlockQuote [0..8]
    Paragraph [2..8]
      Text "hello" [2..7]
