tests/snapshots/parser/blockquote_with_nested_list_and_code.snap
---
source: tests/snapshot_parse.rs
description: "> - item one\n> - item two\n>\n> ```rs\n> fn f() {}\n> ```\n"
---
Document [0..54]
  BlockQuote [0..54]
    List ordered=false start=- spread=false [2..26]
      ListItem spread=false checked=- [2..13]
        Paragraph [4..13]
          Text "item one" [4..12]
      ListItem spread=false checked=- [15..26]
        Paragraph [17..26]
          Text "item two" [17..25]
    CodeBlock lang=Some("rs") meta=None value="fn f() {}\n" [30..54]
