tests/snapshots/parser/container_nested_marker_tab_preserves_existing_columns_html.snap
---
source: tests/snapshot_parse/containers.rs
description: "> -\tfoo\n>\n>   bar\n"
---
<blockquote>
<ul>
<li><p>foo</p>
<p>bar</p>
</li>
</ul>
</blockquote>
